--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,9 @@ bytes = "1"
 # err-derive = "0.2.3"
 libc = "0.2.69"
 mio = "0.6"
-quinn = "0.6.1"
-quinn-proto = "0.6.1"
+quinn = "0.7.0"
+quinn-proto = "0.7.0"
+tokio-socks = "0.5.1"
 rustls = { version = "0.18.0", features = ["quic"], optional = true }
 tracing = "0.1.10"
 tracing-appender = "0.1"
