--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,11 @@ quinn = "0.7.0"
 quinn-proto = "0.7.0"
 rustls = { version = "0.18.0", features = ["quic"], optional = true }
 tracing = "0.1.10"
+tracing-log = "0.1.2"
 tracing-appender = "0.1"
 tracing-subscriber = { version = "0.2.5", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"]}
 tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
+tokio-trace = { version = "0.1", features = ["log"] }
 futures = "0.3.1"
 futures-util = "0.3"
 futures-core = "0.3.5"
