--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,9 @@ name = "magicalane"
 path = "src/main.rs"
 
 [dependencies]
+socks5lib = { git = "https://github.com/magicalne/socks5lib", branch = "main"}
 bytes = "1"
-# err-derive = "0.2.3"
 libc = "0.2.69"
-mio = "0.6"
 quinn = "0.7.0"
 quinn-proto = "0.7.0"
 rustls = { version = "0.18.0", features = ["quic"], optional = true }
@@ -34,18 +33,11 @@ tokio = { version = "^1.2.0", features = ["full"] }
 webpki = { version = "0.21", optional = true }
 anyhow = "1.0.22"
 thiserror = "1.0"
-crc = "1.8.1"
 bencher = "0.1.5"
 directories-next = "1.0.1"
 directories = "2.0"
 rand = "0.7"
 rcgen = "0.8"
 structopt = "0.3.0"
-unwrap = "1.2.1"
-url = "2"
-hyper = "0.13"
-byteorder = "1.3.4"
 nom = "5.1"
-pin-project = "1.0"
-nix = "0.18.0"
-crossbeam = "0.8.0"
+pin-project = "1.0.7"
