--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ tracing-subscriber = { version = "0.2.5", default-features = false, features = [
 tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
 tokio-trace = { version = "0.1", features = ["log"] }
 futures = "0.3.1"
-futures-util = "0.3"
+tokio-util = { version = "0.6.7", features = ["full"] }
 futures-core = "0.3.5"
 tokio = { version = "^1.2.0", features = ["full"] }
 webpki = { version = "0.21", optional = true }
