--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ tokio = { version = "^1.2.0", features = ["full"] }
 webpki = { version = "0.21", optional = true }
 anyhow = "1.0.22"
 thiserror = "1.0"
+toml = "0.5.8"
+serde = { version = "1.0", features = ["derive"] }
 bencher = "0.1.5"
 directories-next = "1.0.1"
 directories = "2.0"
