--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ libc = "0.2.69"
 quinn = "0.7.0"
 quinn-proto = "0.7.0"
 rustls = { version = "0.18.0", features = ["quic"], optional = true }
+log = "0.4.14"
+env_logger = "0.9.0"
 tracing = "0.1.10"
 tracing-log = "0.1.2"
 tracing-appender = "0.1"
@@ -32,6 +34,8 @@ tokio = { version = "^1.2.0", features = ["full"] }
 webpki = { version = "0.21", optional = true }
 anyhow = "1.0.22"
 thiserror = "1.0"
+toml = "0.5.8"
+serde = { version = "1.0", features = ["derive"] }
 bencher = "0.1.5"
 directories-next = "1.0.1"
 directories = "2.0"
